--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://darshanmaru97.github.io/restaurant-landing-page",
   "name": "restraunt",
   "private": true,
   "version": "0.0.0",
